--- a/pet-adopt-app/package.json
+++ b/pet-adopt-app/package.json
@@ -18,6 +18,7 @@
     "@clerk/types": "^4.46.0",
     "@expo/metro-runtime": "~6.1.1",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
@@ -39,13 +40,15 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "expo-image-picker": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
