--- a/pet-adopt-app/tsconfig.json
+++ b/pet-adopt-app/tsconfig.json
@@ -2,16 +2,21 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-jsx",
+    "allowJs": true,
+    "checkJs": false,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/_layout.jsx", "app/index.jsx"  ]
+    "expo-env.d.ts",
+    "app/_layout.jsx",
+    "app/index.jsx"
+  ]
 }
