--- a/pet-adopt-app/package.json
+++ b/pet-adopt-app/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~18.0.7",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.7",
     "expo-router": "~6.0.0-preview.16",
     "expo-secure-store": "~15.0.6",
@@ -37,18 +38,19 @@
     "expo-updates": "~29.0.8",
     "expo-web-browser": "~15.0.6",
     "firebase": "^11.4.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
-    "expo-image-picker": "~17.0.8"
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
