--- a/pet-adopt-app/package.json
+++ b/pet-adopt-app/package.json
@@ -18,18 +18,18 @@
     "@clerk/types": "^4.46.0",
     "@expo/metro-runtime": "~6.1.1",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "^54.0.0",
+    "expo": "~54.0.0",
     "expo-blur": "~15.0.6",
     "expo-constants": "~18.0.7",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.7",
-    "expo-router": "~6.0.0-preview.16",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.6",
     "expo-splash-screen": "~31.0.8",
     "expo-status-bar": "~3.0.7",
@@ -39,30 +39,27 @@
     "expo-web-browser": "~15.0.6",
     "firebase": "^11.4.0",
     "moment": "^2.30.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.81.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-gifted-chat": "^2.8.1",
-    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "expo-image-picker": "~16.0.6"
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "^19.1.12",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "~29.7.0",
-    "jest-expo": "^53.0.0",
-    "react-test-renderer": "^19.1.0",
-    "typescript": "~5.8.3"
+    "jest-expo": "~54.0.12",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
